# contents of pyproject.toml

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example-package-jgarciamesa"
dynamic = ["version"]
description = "example package for INTERSECT24"
dependencies = [
  "numpy"
]
authors = [
  { name="Juanjo Garcia Mesa" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]

[tool.hatch]
version.path = "src/example_package_jgarciamesa/__init__.py"

[project.urls]
"Source Code" = "https://github.com/jgarciamesa/example-package-jgarciamesa"